[package]
name = "feather-index"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
byteorder = "1.5.0"
clap = { version = "4.5.42", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
color-eyre = "0.6.5"
futures = "0.3.31"
hex = "0.4.3"
home = "0.5.11"
num-format = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sled = "0.34.7"
subxt = "0.43.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
zerocopy = "0.8.26"
zerocopy-derive = "0.8.26"
